Fix z-index of editor

--- a/project/src/styl/editor.styl
+++ b/project/src/styl/editor.styl
@@ -2,6 +2,8 @@ pitHeight = (100vh - 50px) / 8
 pitHeightBigScreen = (100vh - 50px) / 8 + 5vh
 
 .editor
+  .board_wrapper
+    transform none
   @media only screen and (orientation: portrait)
     height 100%
   @media only screen and (orientation: landscape)
